--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "podmaxs",
   "license": "MIT",
   "devDependencies": {
-    "yargs": "^8.0.2"
+  },
+  "dependencies": {
+    "yargs": "^8.0.2",
+    "colors": "^1.1.2"
   }
 }
