--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "keywords": [
     "dynamicmind"
   ],
+  "repository" : { 
+  	"type" : "git", 
+  	"url" : "https://github.com/podmaxs/dm-cli.git"
+  },
   "author": "podmaxs",
   "license": "MIT",
   "devDependencies": {},
