--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "yargs": "^8.0.2",
-    "colors": "^1.1.2"
+    "colors": "^1.3.1",
+    "yargs": "^12.0.1"
   }
 }
